...
                                <rect key="frame" x="24" y="733" width="353" height="37"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="37" id="J0j-cL-tgJ"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="UPDATE">
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="updateBtn:" destination="vXQ-H8-Aib" eventType="touchUpInside" id="D5v-oA-4rF"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="cVo-Gc-SvX"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="w4G-8B-juJ"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Edit Activity">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="btnUpdate:" destination="gAp-T3-aGv" eventType="touchUpInside" id="lUu-Jh-3e4"/>
                                </connections>
...
            <point key="canvasLocation" x="-222" y="69"/>
        </scene>
        <!--Home-->
        <scene sceneID="AAx-g3-Oss">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L3g-JO-p9n" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="BWP-Lz-3Ww"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="M5E-x2-Xbd">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" title="Pending">
                                                        <fontDescription key="titleFontDescription" type="system" pointSize="0.0"/>
                                                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </buttonConfiguration>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sIL-uF-tmx">
                                                    <rect key="frame" x="191" y="48" width="92" height="22"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
            <point key="canvasLocation" x="2823.6641221374043" y="679.92957746478874"/>
        </scene>
        <!--Activities-->
        <scene sceneID="pdU-N5-8fb">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L8I-db-Ybn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Activities" image="dumbbell.fill" catalog="system" id="rh5-xp-ytk"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1bn-UM-3SA">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
